Add Java 8 control-plane client support