@@ -1,17 +1,38 @@
 package com.actiongraph.controlplane.auth;
 
-public record SharedSecretTokenProtection(
-        String tokenHeader,
-        String sharedSecret
-) {
-    public SharedSecretTokenProtection {
-        if (tokenHeader == null || tokenHeader.isBlank()) {
+public final class SharedSecretTokenProtection {
+    private final String tokenHeader;
+    private final String sharedSecret;
+
+    public SharedSecretTokenProtection(String tokenHeader, String sharedSecret) {
+        if (isBlank(tokenHeader)) {
             throw new IllegalArgumentException("token header must not be blank");
         }
-        sharedSecret = sharedSecret == null ? "" : sharedSecret;
+        this.tokenHeader = tokenHeader;
+        this.sharedSecret = sharedSecret == null ? "" : sharedSecret;
+    }
+
+    public String tokenHeader() {
+        return tokenHeader;
+    }
+
+    public String sharedSecret() {
+        return sharedSecret;
+    }
+
+    public String getTokenHeader() {
+        return tokenHeader;
+    }
+
+    public String getSharedSecret() {
+        return sharedSecret;
     }
 
     public boolean enabled() {
-        return !sharedSecret.isBlank();
+        return !isBlank(sharedSecret);
+    }
+
+    private static boolean isBlank(String value) {
+        return value == null || value.trim().isEmpty();
     }
 }
